Closed Bug 863843 Opened 12 years ago Closed 12 years ago

Android: blocklist STAGEFRIGHT on rk30board

Categories

(Core :: Graphics, defect)

ARM
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla23
Tracking Status
firefox21 --- fixed
firefox22 --- fixed

People

(Reporter: bjacob, Assigned: bjacob)

References

Details

Attachments

(1 file)

This is the built-in-blocklist version of bug 836203.
Attachment #739765 - Flags: review?(joe) → review+
Blocks: 808378
Assignee: nobody → bjacob
Target Milestone: --- → mozilla23
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Not sure if we should track this prior to confirming the fix on m-c. Has crash volume changed, or do we need to speculatively uplift to see the impact?
Flags: needinfo?(scoobidiver)
Keywords: verifyme
(In reply to Alex Keybl [:akeybl] from comment #6) > Has crash volume changed, The crash volume hasn't changed in m-c: zero before the patch and zero after. Crashes happen around one build every seven builds in Aurora. > or do we need to speculatively uplift to see the impact? The only way to test the efficiency of an Android blocklist is to uplift it to Beta as Aurora and Nightly populations are too small.
Flags: needinfo?(scoobidiver)
Which devices are using a 'rk30board'?
(In reply to Aaron Train [:aaronmt] from comment #8) > Which devices are using a 'rk30board'? See bug 808378 comment 12.
Don't believe mobile QA has any hardware to verify this on. The I9100 from bug 808378 stood out. I checked on my SII and it's an SMDK4210. $ cat /proc/cpuinfo Processor : ARMv7 Processor rev 1 (v7l) processor : 0 BogoMIPS : 1592.52 Features : swp half thumb fastmult vfp edsp neon vfpv3 tls CPU implementer : 0x41 CPU architecture: 7 CPU variant : 0x2 CPU part : 0xc09 CPU revision : 1 Hardware : SMDK4210 Revision : 000e Serial : 304d1909796ed25e
mass remove verifyme requests greater than 4 months old
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: