Bug 863843 - Android: blocklist STAGEFRIGHT on rk30board - r=joedrew